[ref] Use Map.of and List.of where possible