@@ -7,7 +7,6 @@
 package de.uib.configed.core.domain.serverdata.dataservice;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -413,7 +412,7 @@ public class UserRolesConfigDataService extends DataService {
 			List<Object> forbiddenItems = serverPropertyMap.get(configKey);
 			dataServices.cacheManager.setCachedData(CacheIdentifier.TERMINAL_FORBIDDEN, forbiddenItems);
 		} else {
-			dataServices.cacheManager.setCachedData(CacheIdentifier.TERMINAL_FORBIDDEN, Collections.emptyList());
+			dataServices.cacheManager.setCachedData(CacheIdentifier.TERMINAL_FORBIDDEN, List.of());
 		}
 	}
 
@@ -615,11 +614,9 @@ public class UserRolesConfigDataService extends DataService {
 
 		Map<String, Object> item = Utils.createNOMitem("UnicodeConfig");
 
-		List<Object> defaultValues = new ArrayList<>();
-		defaultValues.add(dataServices.config.getOpsiDefaultDomainPD());
+		List<Object> defaultValues = List.of(dataServices.config.getOpsiDefaultDomainPD());
 
-		List<Object> possibleValues = new ArrayList<>();
-		possibleValues.add(dataServices.config.getOpsiDefaultDomainPD());
+		List<Object> possibleValues = List.of(dataServices.config.getOpsiDefaultDomainPD());
 
 		item.put("ident", OpsiServiceNOMPersistenceController.CONFIGED_GIVEN_DOMAINS_KEY);
 		item.put("description", "saved domains for creating clients");
@@ -638,15 +635,10 @@ public class UserRolesConfigDataService extends DataService {
 		Logging.warning(this, "checkStandardConfigs:  since no values found setting values for  ",
 				OpsiServiceNOMPersistenceController.KEY_HOST_EXTRA_DISPLAYFIELDS_IN_PANEL_LICENSES_RECONCILIATION);
 		// key not yet configured
-		List<Object> defaultValues = new ArrayList<>();
+		List<Object> defaultValues = List.of();
 		// example for standard configuration other than empty
 		// extra columns for license management, page licenses reconciliation
-		List<Object> possibleValues = new ArrayList<>();
-		possibleValues.add("description");
-		possibleValues.add("inventoryNumber");
-		possibleValues.add("notes");
-		possibleValues.add("ipAddress");
-		possibleValues.add("lastSeen");
+		List<Object> possibleValues = List.of("description", "inventoryNumber", "notes", "ipAddress", "lastSeen");
 
 		// create config for service
 		Map<String, Object> item = Utils.createNOMitem("UnicodeConfig");
@@ -669,12 +661,9 @@ public class UserRolesConfigDataService extends DataService {
 		Logging.warning(this, "checkStandardConfigs:  since no values found setting values for  ",
 				ConfigDataService.KEY_DISABLED_CLIENT_ACTIONS);
 		// key not yet configured
-		List<Object> defaultValues = Collections.emptyList();
+		List<Object> defaultValues = List.of();
 
-		List<Object> possibleValues = new ArrayList<>();
-		possibleValues.add(ITEM_ADD_CLIENT);
-		possibleValues.add(ITEM_DELETE_CLIENT);
-		possibleValues.add(ITEM_FREE_LICENSES);
+		List<Object> possibleValues = List.of(ITEM_ADD_CLIENT, ITEM_DELETE_CLIENT, ITEM_FREE_LICENSES);
 
 		Map<String, Object> item = Utils.createNOMitem("UnicodeConfig");
 		item.put("id", ConfigDataService.KEY_DISABLED_CLIENT_ACTIONS);
@@ -694,13 +683,10 @@ public class UserRolesConfigDataService extends DataService {
 		Logging.warning(this, "checkStandardConfigs:  since no values found setting values for  ",
 				ConfigDataService.KEY_OPSICLIENTD_EXTRA_EVENTS);
 		// key not yet configured
-		List<Object> defaultValues = Collections
-				.singletonList(OpsiServiceNOMPersistenceController.OPSI_CLIENTD_EVENT_ON_DEMAND);
+		List<Object> defaultValues = List.of();
 
-		List<Object> possibleValues = new ArrayList<>();
-
-		possibleValues.add(OpsiServiceNOMPersistenceController.OPSI_CLIENTD_EVENT_ON_DEMAND);
-		possibleValues.add(OPSI_CLIENTD_EVENT_SILENT_INSTALL);
+		List<Object> possibleValues = List.of(OpsiServiceNOMPersistenceController.OPSI_CLIENTD_EVENT_ON_DEMAND,
+				OPSI_CLIENTD_EVENT_SILENT_INSTALL);
 
 		Map<String, Object> item = Utils.createNOMitem("UnicodeConfig");
 		item.put("id", ConfigDataService.KEY_OPSICLIENTD_EXTRA_EVENTS);
